clang/test/BSC/Positive/Driver/rewrite-bsc/rewrite_bsc_option_ignore.c
// RUN: %clang -rewrite-bsc %s
// WARN: warning: ignoring '-rewrite-bsc' option because rewriting input type 'c' is not supported [-Woption-ignored]

int main() { return 0; }